--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
    
     <div class=row>
         
-        <div class="col-md-4">
+        <div class="col-md-3">
             <button class="button" onclick="setAdditionGame()">Addition</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <button class="button" onclick="setMultiplicationGame()">Multiplication</button>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <button class="button" onclick="setSubtractionGame()">Subtraction</button>
         </div>
         
+        <div class="col-md-3">
+            <button class="button" onclick="setDivisionGame()">Division</button>
+        </div>
     </div>
 
 
